[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew", "yew_integration", "parser"] }
gloo = "0.8.0"
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = ["HtmlElement", "HtmlHeadingElement"] }